--- a/photos/templates/photos/index.html
+++ b/photos/templates/photos/index.html
@@ -277,26 +277,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+    <!-- Images Loaded-->
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+
     <!-- Masonry-->
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 
     <script>
       const grid = document.querySelector(".grid");
 
-      const msnry = new Masonry(grid, {
-        "itemSelector": ".grid-item",
-        "columnWidth": ".grid-sizer",
-        "percentPosition": true,
-        "gutter": 4
-      });
-      
+      $(grid).imagesLoaded(() => {
+        const msnry = new Masonry(grid, {
+          "itemSelector": ".grid-item",
+          "columnWidth": ".grid-sizer",
+          "percentPosition": true,
+          "gutter": 4
+        });
 
-      setTimeout(() => {
-        msnry.masonry( 'reload' );
-      }, 10);
-      setTimeout(() => {
         grid.style.opacity = 1;
-      }, 50);
+      });
 
       $("#anonAlert").on("closed.bs.alert", function () {
         $(".anon-img").addClass("visible").removeClass("blurred");
