--- a/photos/templates/photos/index.html
+++ b/photos/templates/photos/index.html
@@ -80,6 +80,7 @@
         background-image: url('{% static "images/header.svg" %}');
         background-size: cover;
         background-repeat: no-repeat;
+        background-position: center center;
       }
 
       @media (min-width: 768px) {
@@ -237,11 +238,7 @@
           <p class="lead">Because Instagram is overrated</p>
           <p>
             <a href="https://instagram.com/thenameisflicbot" class="btn btn-danger my-2 rounded-pill font-weight-bold">
-              Follow on Instagram
-            </a>
-            &nbsp;or&nbsp;
-            <a href="https://t.me/flicsl" class="btn btn-outline-danger rounded-pill font-weight-bold">
-              Text me on Telegram
+              Follow me
             </a>
           </p>
         </div>
