--- a/photos/templates/photos/index.html
+++ b/photos/templates/photos/index.html
@@ -64,7 +64,7 @@
       }
 
       @media (max-width: 576px) {
-        .navbar .container {
+        .navbar.signed-in .container {
           justify-content: center !important;
         }
       }
@@ -219,7 +219,7 @@
 
   <body>
     <header>
-      <div class="navbar">
+      <div class="navbar {% if user.is_authenticated %} signed-in {% endif %}">
         <div class="container d-flex justify-content-between">
           <a href="#" class="navbar-brand d-flex align-items-center text-white">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
@@ -230,8 +230,8 @@
               <span class="text-white font-weight-bold">Hi, {{ user.username }}!</span>
               <a class="text-danger font-weight-bold" href="{% url 'logout' %}">log out?</a>
             {% else %}
-              <a href="{% url 'login' %}" class="btn btn-danger rounded-pill mr-2 d-block d-sm-none"><strong>Sign in</strong></a>
-              <a href="{% url 'login' %}" class="btn btn-danger rounded-pill mr-2 d-none d-sm-block"><strong>Sign in to your account</strong></a>
+              <a href="{% url 'login' %}" class="btn btn-danger rounded-pill d-block d-sm-none"><strong>Sign in</strong></a>
+              <a href="{% url 'login' %}" class="btn btn-danger rounded-pill d-none d-sm-block"><strong>Sign in to your account</strong></a>
             {% endif %}
           </div>
         </div>
@@ -241,11 +241,11 @@
     <main role="main">
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading font-weight-bold">Welcome to Flic Pics</h1>
+          <h1 class="jumbotron-heading font-weight-bold">Welcome to Flic's photo blog</h1>
           <p class="lead">Because Instagram is overrated</p>
           <p>
             <a href="https://instagram.com/thenameisflicbot" class="btn btn-danger my-2 rounded-pill font-weight-bold">
-              Follow me
+              &nbsp;&nbsp;&nbsp;&nbsp;Follow this website&nbsp;&nbsp;&nbsp;&nbsp;
             </a>
           </p>
         </div>
