--- a/photos/templates/photos/index.html
+++ b/photos/templates/photos/index.html
@@ -241,11 +241,11 @@
     <main role="main">
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading font-weight-bold">Welcome to Flic's photo blog</h1>
+          <h1 class="jumbotron-heading font-weight-bold">Welcome to Fe's photoblog</h1>
           <p class="lead">Because Instagram is overrated</p>
           <p>
-            <a href="https://instagram.com/thenameisflicbot" class="btn btn-danger my-2 rounded-pill font-weight-bold">
-              &nbsp;&nbsp;&nbsp;&nbsp;Follow this website&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://instagram.com/thenameisflicbot" class="text-center btn btn-danger px-4 my-2 rounded-pill font-weight-bold">
+              Follow this website
             </a>
           </p>
         </div>
