--- a/photos/templates/photos/index.html
+++ b/photos/templates/photos/index.html
@@ -241,7 +241,7 @@
     <main role="main">
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading font-weight-bold">Welcome to Fe's photoblog</h1>
+          <h1 class="jumbotron-heading font-weight-bold">Welcome to Flic's photoblog</h1>
           <p class="lead">Because Instagram is overrated</p>
           <p>
             <a href="https://instagram.com/thenameisflicbot" class="text-center btn btn-danger px-4 my-2 rounded-pill font-weight-bold">
